@@ -45,6 +45,7 @@ Application Changes:
 - Cyberlimb starting strength and agility can now be customised using the minagility and minstrength elements in a piece of cyberware. For example, to set the minimum strength to 5 you would use <minstrength>5</minstrength>.
 - Fixed cyberware that both consumes and grants capacity not properly allowing the child capacity to be used.
 - Fixed cyberware grades incorrectly being able to be changed if an item has a forcegrade, but is the child of an item that has its grade changed. For example, prevents Cyberlimb customisation from having a grade specified if the limb is upgraded to Alphaware. 
+- Fixed an issue with Drug/Cyber/Bioware grade xpath lookups failing if the source id is in uppercase. Closes #5046
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
